fix(auth): resolve JWT secret fallback, CORS preflight rate limiting, and network timeout handling